@stocksの定義、updateメソッド作る

--- a/app/views/admin/stocks/edit.html.haml
+++ b/app/views/admin/stocks/edit.html.haml
@@ -23,7 +23,7 @@
             %th{scope:"col"} 金額
             %th{scope:"col"} 在庫数
         %tbody
-          - @schedule.stocks.each do |stock|
+          - @stocks.each do |stock|
             %tr
               %td
                 = stock.grade
